# libexttextcat

./: .gitignore  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  groups  libexttextcat.pc.in  libexttextcat.vapi  libtextcat.pc.in  project.config
include/: textcat.h
langclass/: Makefile.am  conf.txt  fpdb.conf
langclass/CVS/: Entries  Repository
langclass/LM/: Makefile.am  ilo.lm  skr.lm  xh.lm  zu.lm
langclass/LM/CVS/: Entries  Repository
langclass/ShortTexts/: Makefile.am  README  ace.txt  ada.txt  af.txt  ak.txt  alt.txt  am.txt  ar.txt  arn.txt  ast.txt  ay.txt  az-Cyrl.txt  az.txt  ban.txt  be.txt  bem.txt  bg.txt  bho.txt  bi.txt  bik.txt  bm.txt  bn.txt  br.txt  bs.txt  buc.txt  ca.txt  ckb.txt  cs.txt  cv.txt  cy.txt  da.txt  de.txt  dv.txt  dz.txt  ee.txt  el.txt  emk-Latn.txt  en.txt  eo.txt  (+130 more)
langclass/ShortTexts/CVS/: Entries  Repository
src/: .#fingerprint.c.1.2  .gitignore  Makefile  Makefile.am  Makefile.in  af.test  am.test  ar.test  be.test  bg.test  br.test  ca.test  common.c  common.h  common_impl.h  config.h.in  constants.h  createfp.c  cs.test  da.test  de.test  en.test  eo.test  et.test  eu.test  exttextcat-version.h  exttextcat-version.h.in  fi.test  fingerprint.c  fingerprint.h  fr.test  fy.test  ga.test  gd.test  hu.test  hy.test  libexttextcat.map  libtextcat.map  makefile.mk  nl.test  (+16 more)
